--- a/.prettierignore
+++ b/.prettierignore
@@ -4,4 +4,6 @@ assets/plotly/demo.html
 _pages/about.md
 _sass/_base.scss
 _layouts/bib.liquid
+_layouts/cv.liquid
 _includes/resume/work.liquid
+_includes/resume/education.liquid
