--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,7 @@
 *.min.css
 assets/css/main.scss
 assets/plotly/demo.html
+assets/json/resume.json
 _pages/about.md
 _sass/_base.scss
 _layouts/bib.liquid
