--- a/.prettierignore
+++ b/.prettierignore
@@ -4,6 +4,7 @@ assets/plotly/demo.html
 assets/json/resume.json
 _pages/about.md
 _sass/_base.scss
+_layouts/about.liquid
 _layouts/bib.liquid
 _layouts/cv.liquid
 _includes/resume/work.liquid
