--- a/.prettierignore
+++ b/.prettierignore
@@ -7,6 +7,7 @@ _sass/_base.scss
 _layouts/about.liquid
 _layouts/bib.liquid
 _layouts/cv.liquid
+_includes/header.liquid
 _includes/resume/work.liquid
 _includes/resume/education.liquid
 _news/announcement_2.md
