--- a/.prettierignore
+++ b/.prettierignore
@@ -9,6 +9,7 @@ _layouts/bib.liquid
 _layouts/cv.liquid
 _includes/header.liquid
 _includes/projects_horizontal.liquid
+_includes/projects.liquid
 _includes/resume/work.liquid
 _includes/resume/education.liquid
 _news/announcement_2.md
