--- a/.prettierignore
+++ b/.prettierignore
@@ -13,3 +13,4 @@ _includes/projects.liquid
 _includes/resume/work.liquid
 _includes/resume/education.liquid
 _news/announcement_2.md
+_projects/motif_representation.md
