--- a/.prettierignore
+++ b/.prettierignore
@@ -14,3 +14,4 @@ _includes/resume/work.liquid
 _includes/resume/education.liquid
 _news/announcement_2.md
 _projects/motif_representation.md
+_posts/molr.md
