--- a/.prettierignore
+++ b/.prettierignore
@@ -14,4 +14,5 @@ _includes/resume/work.liquid
 _includes/resume/education.liquid
 _news/announcement_2.md
 _projects/motif_representation.md
-_posts/molr.md
+_projects/rps_classification.md
+_posts/2023-07-19-molr.md
