--- a/.prettierignore
+++ b/.prettierignore
@@ -14,6 +14,7 @@ _includes/resume/work.liquid
 _includes/resume/education.liquid
 _news/announcement_2.md
 _news/announcement_3.md
+_news/announcement_4.md
 _projects/motif_representation.md
 _projects/rps_classification.md
 _posts/2023-07-19-molr.md
