--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,11 +1,19 @@
 places:
-  - country: United Kingdom
+  - country: United 
+    flag: UK
+    continent: Europe
     cities:
       - name: Glasgow
         lat: 55.864239
         lon: -4.251806
+        start_date: "2024-11-25"
+        end_date: "2024-11-29"
   - country: Netherlands
+    flag: ND
+    continent: Europe
     cities:
       - name: Amsterdam
         lat: 52.370216
         lon: 4.895168
+        start_date: "2024-11-29"
+        end_date: "2024-11-29"
