--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,6 +1,6 @@
 places:
-  - country: United 
-    flag: UK
+  - country: United Kingdom
+    flag: gb
     continent: Europe
     cities:
       - name: Glasgow
@@ -9,7 +9,7 @@ places:
         start_date: "2024-11-25"
         end_date: "2024-11-29"
   - country: Netherlands
-    flag: ND
+    code: nl
     continent: Europe
     cities:
       - name: Amsterdam
